[package]
name = "neural-core-algo"
version = "0.9.7.890"
edition = "2021"
authors = ["Ammar [SNEPPX] <algoSNEPPX@gmail.com>"]
description = "Rust bindings for SNEPPX-ALG tensor library — tensor ops, model building, training loop"
license = "MIT"
repository = "https://github.com/ammar49-cyber/sneppx-alg"
homepage = "https://github.com/ammar49-cyber/sneppx-alg"
keywords = ["tensor", "neural-network", "machine-learning", "deep-learning"]
categories = ["science::robotics", "algorithms"]

# Ensure this crate is part of the workspace
[workspace]

[lib]
crate-type = ["lib"]
